--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
         "@fortawesome/fontawesome-free": "^6.2.0",
         "@popperjs/core": "^2.10.2",
         "axios": "^0.27",
-        "bootstrap": "^5.2.1",
+        "bootstrap": "^5.2.2",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "sass": "^1.32.11",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "node": "^19.1.0",
+        "nodejs": "^0.0.0"
     }
 }
